adding a random key to distribute the messages on more partitions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_CREATE_TOPICS: "PETSHOP_NEW_ORDER:1:1"
+      KAFKA_CREATE_TOPICS: "PETSHOP_NEW_ORDER:3:1,PETSHOP_SEND_EMAIL:3:1"
       
 networks: 
   net:
