--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,34 @@
-version: '2'
-services:
-  zookeeper:
-    image: confluentinc/cp-zookeeper:latest
-    networks: 
-      - net
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
+version: '3'
 
-  kafka:
-    image: confluentinc/cp-kafka:latest
+services:
+  createneworder:
+    image: createneworder
+    build:
+      context: ./CreateNewOrder
     networks: 
-      - net
-    depends_on:
-      - zookeeper
-    ports:
-      - 9092:9092
-    environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
-      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
-      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-      KAFKA_CREATE_TOPICS: "PETSHOP_NEW_ORDER:3:1,PETSHOP_SEND_EMAIL:3:1"
-      
-networks: 
-  net:
+      - petshop-network
+
+  processneworder:
+    image: processneworder
+    build:
+      context: ./ProcessNewOrder
+    networks: 
+      - petshop-network
+
+  sendemail:
+    image: sendemail
+    build:
+      context: ./SendEmail
+    networks: 
+      - petshop-network
+
+  logprocessor:
+    image: logprocessor
+    build:
+      context: ./LogProcessor
+    networks: 
+      - petshop-network
+
+networks:
+  petshop-network:
     driver: bridge
